--- a/metanoia/index.html
+++ b/metanoia/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desa Pesisir Pantai</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header>
+
+        <!-- Navigasi -->
+        
+    </header>
+
+    <!-- BUKAN -->
+    <main>
+
+
+    </main>
+
+    <!-- FOOOTAH -->
+    <footer>
+
+    </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
