--- a/metanoia/index.html
+++ b/metanoia/index.html
@@ -5,14 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desa Pesisir Pantai</title>
-
+    <!-- icons -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- HEADER -->
-    <header>
+    <header class="header">
 
         <!-- Navigasi -->
+        <nav class="nav" id="nav">
+            <!-- Logo -->
+            <a href="#home" class="nav__logo">
+                <i class="uil uil-trees nav__icon"></i>
+            </a>
+
+            <!-- menus -->
+            <div class="nav__menus" id="nav-menu">
+                <ul class="nav__list grid">
+                    <li class="nav__item">
+                        <i class="uil uil-store nav__item-icon"></i>penginapan
+                    </li>
+                    <li class="nav__item">
+                        <i class="uil uil-mountains-sun nav__item-icon"></i>wisata
+                    </li>
+                    <li class="nav__item">
+                        <i class="uil uil-shopping-bag nav__item-icon"></i>belanja
+                    </li>
+                </ul>
+
+                <!-- close menu -->
+                <i class="uil uil-times-circle nav__menu-close"></i>
+            </div>
+
+            <!-- burger -->
+            <div class="nav__burger" >
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="uil uil-layers"></i>
+                </div>
+            </div>
+        </nav>
         
     </header>
 
